[tool.poetry]
name = "alembictest2"
version = "0.1.0"
description = ""
authors = ["Evan Young <cantis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
alembic = "^1.13.1"
sqlalchemy = "^2.0.24"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# -ra is for showing the output of the tests that failed
# -q is for quiet mode
addopts = "-ra -q"
# this adds the application to the path for the tests
pythonpath = [".", "src"]
# this sets the testpaths to the tests directory
testpaths = ["tests"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pycodestyle]
max-line-length = 120